terminal output is displayed in browser

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,7 +17,10 @@
     </div>
 
     <div class="launcher-debug">
-      <div class="console"></div>
+      <div class="console">
+        <span id="cursor">_</span>
+      </div>
+      <div class="background"></div>
     </div>
 
   </body>
